# Lumen

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
installer/linux/: install.sh  lumen.desktop
installer/macos/: build_app.sh
installer/windows/: lumen.iss
lumen/: __init__.py  __main__.py  app.py  automation.py  autostart.py  config.py  engine.py  hotkeys.py  resolution.py  theme.py  vibrance.py  widgets.py  winicon.py
lumen/backends/: __init__.py  base.py  linux.py  macos.py  windows.py
scripts/: build.py  make_icons.py
